--- a/css/layout.css
+++ b/css/layout.css
@@ -59,3 +59,75 @@ body {
     object-fit: cover;
     display: block;
 }
+.section-3 {
+    width: 100%;
+    padding-top: 215px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+.section-3 .container-1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1440px;
+    margin: 0 auto;
+    gap: 37px;
+}
+.section-3 .container-1 .Header-1 {
+    font-family: "Old Standatd TT" , serif;
+    margin: 0;
+    font-size: 100px;
+    font-weight: 600;
+    text-decoration: underline;
+    text-decoration-thickness: 4px;
+    text-underline-offset: 10px;
+    text-transform: uppercase;
+    color: aliceblue;
+    letter-spacing: 5px;
+    display: inline-block;
+    transform: scaleY(1.35);
+}
+.section-3 .container-1 img {
+    height: 4px;
+    width: 334px;
+    object-fit: cover;
+}
+.container-2_3 {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+    gap: 20px;
+}
+.container-2 {
+    flex: 1;
+    margin-left: 77px;
+    margin-top: 50px;
+}
+.text-1 {
+    font-size: 51px;
+    font-weight: 400;
+    line-height: 1.1;
+    color: aliceblue;
+    transform: scaleY(1.1)
+}
+.container-3 {
+    flex: 0 0 auto;
+    text-align: right;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+}
+.container-3 .text-2 {
+    position: relative;
+    top: -1050px;
+    font-size: 900px;
+    font-weight: 400;
+    color: aliceblue;
+    transform: scaleY(1.3)
+    margin: 0;
+}
