--- a/css/layout.css
+++ b/css/layout.css
@@ -97,16 +97,16 @@ body {
 .container-2_3 {
     display: flex;
     justify-content: space-between;
-    align-items: stretch;
+    align-items: flex-start;
     max-width: 1440px;
     width: 100%;
-    margin: 0 auto;
+    margin: 0px;
     gap: 20px;
 }
 .container-2 {
     flex: 1;
-    margin-left: 85px;
-    margin-top: 120px;
+    margin-left: 100px;
+    margin-top: 150px;
 }
 .text-1 {
     font-size: 51px;
@@ -117,16 +117,114 @@ body {
 }
 .container-3 {
     flex: 0 0 auto;
-    text-align: right;
     display: flex;
     align-items: flex-start;
-    justify-content: flex-end;
+    margin-top: 100px;
 }
 .container-3 .text-2 {
+    margin: 0;
     position: relative;
-    top: -1000px;
     font-size: 900px;
     font-weight: 400;
+    line-height: 0.75;
     color: aliceblue;
     transform: scaleY(1.3)
+}
+.section-4 {
+    width: 100%;
+    padding-top: 70px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+.container-4 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+    width: 1440px;
+    margin-top: 20px;
+}
+.Header-2 {
+    font-family: "Old Standatd TT", serif;
+    font-size: 100px;
+    font-weight: 600;
+    text-decoration: underline;
+    text-decoration-thickness: 4px;
+    text-underline-offset: 10px;
+    text-transform: uppercase;
+    color: aliceblue;
+    letter-spacing: 5px;
+    display: inline-block;
+    transform: scaleY(1.35);
+}
+.container-4 img {
+    height: 4px;
+    width: 334px;
+    object-fit: cover;
+}
+.section-5 {
+    position: relative;
+    width: 100%;
+    min-height: 3500px;
+    padding: 200px 0;
+    padding-bottom: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 0;;
+    background: url(../images/rectangle_27.svg) center top / contain no-repeat;
+}
+.section-5 > * {
+    z-index: 1;
+    position:relative
+}
+.actor_block {
+    text-align: center;
+    margin-bottom: 120px;
+    position: relative;
+    z-index: 1;
+}
+.section-5 .text_group{
+    position: relative;
+    margin-top: -50px;
+}
+.text_group p {
+    margin: -10px;
+    line-height: 1.05;
+}
+.style_name {
+    font-size: 80px;
+    font-weight: 600;
+    line-height: 1;
+    transform: scaleY(1.3);
+    color:aliceblue
+}
+.italic_font {
+    font-family: "Old Standard TT", serif;
+    font-style: italic;
+    font-weight: 400;
+}
+.role_text {
+    font-size: 65px;
+    font-weight: 400;
+    color: #BFBFBF;
+    line-height: 1;
+}
+.font_name {
+    font-size: 85px;
+    font-weight: 400;
+    color: aliceblue;
+}
+.images_block {
+    display:flex;
+    justify-content: center;
+    gap: 40px;
+    padding: 250px;
+}
+.images_block img {
+    width: 760px;
+    height: auto;
+    margin: 0 40px;
+    object-fit: contain;
 }
