--- a/css/layout.css
+++ b/css/layout.css
@@ -293,3 +293,108 @@ body {
     height: 2px;
     object-fit: cover;
 }
+.section-8 {
+    width: 100%;
+    padding-top: -200px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.container-8 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+    width: 100%;
+    max-width: 1440px;
+    margin-top: 20px;
+}
+
+.container-8 .Header-2 {
+    font-family: "Old Standatd TT", serif;
+    font-size: 90px;
+    font-weight: 600;
+    text-decoration: underline;
+    text-decoration-thickness: 4px;
+    text-underline-offset: 10px;
+    text-transform: uppercase;
+    color: aliceblue;
+    letter-spacing: 3px;
+    display: inline-block;
+    transform: scaleY(1.35);
+}
+.container-8 img {
+    height: 4px;
+    width: 44px;
+    object-fit: cover;
+}
+.section-9 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 100px 0;
+}
+.container-9 {
+    text-align: left;
+    max-width: 1000px;
+}
+.titry {
+    font-family: "Old Standard TT", serif;
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 1.4;
+    color: aliceblue;
+    margin: 0;
+}
+.section-10 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 100px 80px;
+}
+.container-10 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    justify-content: space-between;
+}
+.line-end {
+    width: 300px;
+    height: 4px;
+    object-fit: cover;
+}
+.center-block {
+    position: relative;
+    display: inline-block
+}
+.center-block .end {
+    width: 816px;
+    height: auto;
+    display: block;
+}
+.center-block .text-wrapper {
+    position: absolute;
+    left: 50%;
+    top: 58%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    color: black;
+    margin: 0;
+}
+.center-block .ending {
+    font-family: "Old Standard TT", serif;
+    font-size: 110px;
+    font-weight: 700;
+    transform: scaleY(1.3);
+    margin: 0;
+    
+}
+.center-block .old_standard {
+    font-family: "Old Standard TT", serif;
+    font-size: 70px;
+    font-weight: 400;
+    margin-top: 15px;
+    transform: scaleY(1.3);
+}
